[package]
name = "uniedge"
version = "0.1.0"
edition = "2024"

[dependencies]
fdt = { version = "0.1.5", default-features = false }
linked_list_allocator = { version = "0.10.6", default-features = false, features = ["use_spin"] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "alloc",
  "medium-ethernet",
  "proto-ipv4",
  "socket-tcp",
] }
virtio-drivers = { version = "0.13.0", default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
